# rigoros

./: .gitignore  bochsrc.bxrc  makefile
bootloader/: linker.ld  makefile
bootloader/src/: boot.S
buddyblock/: Cargo.toml  makefile
buddyblock/src/: lib.rs
buddyblock/tests/: tests.rs
kernel/: Cargo.toml  linker.ld  makefile  x86_64-unknown-none.json
kernel/.cargo/: config  config.toml
kernel/src/: buddyblock.rs  context.S  context.rs  entry.S  fixed_writer.rs  gdt.rs  idt.rs  interrupt_queue.rs  interrupts.rs  irq_mutex.rs  keyboard.rs  lib.rs  memory.rs  page.rs  pic.rs  pit.rs  ring_buffer.rs  serial.rs  shell.rs  task.rs  terminal.rs
misc/: memory_map.txt
mkfiles/: conf.mk  rules.mk  toolset.mk
slab_alloc/: Cargo.toml  makefile
slab_alloc/src/: lib.rs  test.rs  test_pagelist.rs  test_slab.rs
slab_alloc/tests/: integration_tests.rs  tests.rs
