[package]
name = "kernel"
version = "0.1.0"
authors = ["ikh"]
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"
opt-level = 0
debug = true

[profile.release]
panic = "abort"
opt-level = 3
debug = false
lto = true

[build-dependencies]
cc = "1.0.73"

[dependencies]
spin = "0.9.2"
volatile = "0.4.4"
bitflags = "1.3.2"
x86_64 = "0.14.8"
pic8259 = "0.10.2"
pc-keyboard = "0.5.1"
uart_16550 = "0.2.16"

[dependencies.num-integer]
version = "0.1.45"
default-features = false

[dependencies.num-iter]
version = "0.1.43"
default-features = false

[dependencies.num_enum]
version = "0.5.11"
default-features = false

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies.arrayvec]
version = "0.7.2"
default-features = false
