[package]
name = "kernel"
version = "0.1.0"
authors = ["ikh"]
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"
opt-level = 0
debug = true

[profile.release]
panic = "abort"
opt-level = 3
debug = false
lto = true

[build-dependencies]
cc = "1.2.20"

[dependencies]
spin = "0.10.0"
volatile = "0.6.1"
bitflags = "2.9.0"
x86_64 = "0.15.2"
pic8259 = "0.11.0"
pc-keyboard = "0.8.0"
uart_16550 = "0.3.2"
buddyblock = { path = "../buddyblock" }

[dependencies.num-integer]
version = "0.1.45"
default-features = false

[dependencies.num-iter]
version = "0.1.43"
default-features = false

[dependencies.num_enum]
version = "0.7.3"
default-features = false

[dependencies.lazy_static]
version = "1.5.0"
features = ["spin_no_std"]

[dependencies.arrayvec]
version = "0.7.6"
default-features = false
